--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
         "darkaonline/l5-swagger": "^9.0",
         "filament/filament": "^3.3",
         "inertiajs/inertia-laravel": "^2.0",
+        "laravel-notification-channels/webpush": "^10.2",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "pusher/pusher-php-server": "^7.2",
         "stancl/tenancy": "^3.9",
         "tightenco/ziggy": "^2.4"
     },
