--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-permission": "^6.20",
         "stancl/tenancy": "^3.9",
         "tightenco/ziggy": "^2.4"
     },
