--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "react": "^19.0.0",
         "react-datepicker": "^8.4.0",
         "react-dom": "^19.0.0",
+        "react-paginate": "^8.3.0",
         "react-router-dom": "^7.6.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
