--- a/.env.example
+++ b/.env.example
@@ -65,14 +65,14 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=test_example
+PUSHER_APP_KEY=test_example
+PUSHER_APP_SECRET=test_example
 PUSHER_APP_CLUSTER=eu
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 
-VITE_PUSHER_APP_KEY=
+VITE_PUSHER_APP_KEY=test_example
 VITE_PUSHER_APP_CLUSTER=eu
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
