--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react": "^19.0.0",
         "react-datepicker": "^8.4.0",
         "react-dom": "^19.0.0",
+        "react-images-uploading": "^3.1.7",
         "react-paginate": "^8.3.0",
         "react-router-dom": "^7.6.3",
         "tailwind-merge": "^3.0.1",
