--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "aws/aws-sdk-php": "^3.351",
         "darkaonline/l5-swagger": "^9.0",
         "filament/filament": "^3.3",
         "inertiajs/inertia-laravel": "^2.0",
