--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.20",
         "stancl/tenancy": "^3.9",
