--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel-notification-channels/webpush": "^10.2",
         "laravel/framework": "^12.0",
+        "laravel/horizon": "^5.33",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
+        "predis/predis": "^3.2",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.20",
         "stancl/tenancy": "^3.9",
