--- a/.env.example
+++ b/.env.example
@@ -78,3 +78,6 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 
 NIGHTWATCH_TOKEN=your-api-key
+
+VEEVOTECH_API_KEY=
+VEEVOTECH_SENDER_ID=Default
