--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.20",
         "stancl/tenancy": "^3.9",
-        "tightenco/ziggy": "^2.4",
-        "twilio/sdk": "^8.8"
+        "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
